tests/ui/rfcs/rfc-2632-const-trait-impl/call-generic-method-nonconst.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/call-generic-method-nonconst.rs:1:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: using `#![feature(effects)]` without enabling next trait solver globally
   |
   = note: the next trait solver must be enabled globally for the effects feature to work correctly
   = help: use `-Znext-solver` to enable

error[E0277]: the trait bound `Runtime: const Compat` is not satisfied
  --> $DIR/call-generic-method-nonconst.rs:23:34
   |
LL | pub const EQ: bool = equals_self(&S);
   |                      ----------- ^^ the trait `const Compat` is not implemented for `Runtime`
   |                      |
   |                      required by a bound introduced by this call
   |
   = help: the trait `Compat` is implemented for `Runtime`
note: required by a bound in `equals_self`
  --> $DIR/call-generic-method-nonconst.rs:16:25
   |
LL | const fn equals_self<T: ~const Foo>(t: &T) -> bool {
   |                         ^^^^^^^^^^ required by this bound in `equals_self`

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
